--- a/app.json
+++ b/app.json
@@ -20,11 +20,21 @@
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#ffffff"
+			},
+			"splash": {
+				"image": "./assets/splash-icon.png",
+				"resizeMode": "contain",
+				"backgroundColor": "#ffffff"
 			}
 		},
 		"web": {
 			"favicon": "./assets/favicon.png",
-			"bundler": "metro"
+			"bundler": "metro",
+			"splash": {
+				"image": "./assets/splash-icon.png",
+				"resizeMode": "cover",
+				"backgroundColor": "#ffffff"
+			}
 		},
 		"plugins": ["expo-router"]
 	}
