--- a/app.json
+++ b/app.json
@@ -1,41 +1,47 @@
 {
-	"expo": {
-		"name": "e-sugar-rush",
-		"scheme": "e-sugar-rush",
-		"slug": "e-sugar-rush",
-		"version": "1.0.0",
-		"orientation": "portrait",
-		"icon": "./assets/icon.png",
-		"userInterfaceStyle": "light",
-		"newArchEnabled": true,
-		"splash": {
-			"image": "./assets/splash-icon.png",
-			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
-		},
-		"ios": {
-			"supportsTablet": true
-		},
-		"android": {
-			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
-				"backgroundColor": "#ffffff"
-			},
-			"splash": {
-				"image": "./assets/splash-icon.png",
-				"resizeMode": "contain",
-				"backgroundColor": "#ffffff"
-			}
-		},
-		"web": {
-			"favicon": "./assets/favicon.png",
-			"bundler": "metro",
-			"splash": {
-				"image": "./assets/splash-icon.png",
-				"resizeMode": "cover",
-				"backgroundColor": "#ffffff"
-			}
-		},
-		"plugins": ["expo-router"]
-	}
+  "expo": {
+    "name": "e-sugar-rush",
+    "scheme": "e-sugar-rush",
+    "slug": "e-sugar-rush",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "splash": {
+        "image": "./assets/splash-icon.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.cpecoder.esugarrush"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5364ed44-c9db-427b-b966-45ced0b3e271"
+      }
+    }
+  }
 }
