--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.17",
-    "expo-blur": "~14.0.1",
+    "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.5",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
@@ -40,9 +41,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.16",
-    "expo-dev-client": "~5.0.5",
-    "expo-checkbox": "~4.0.0"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
